# fmapi-codingagent-opskit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  example-config.json  install.sh  pyproject.toml  setup-fmapi-claudecode.sh
.claude-plugin/: plugin.json
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: release.md
agents/: claudecode.sh
guide/: local-testing.md
lib/: commands.sh  config.sh  core.sh  help.sh  setup.sh  shared.sh
skills-codex/fmapi-codingagent-doctor/: SKILL.md
skills-codex/fmapi-codingagent-list-models/: SKILL.md
skills-codex/fmapi-codingagent-reauth/: SKILL.md
skills-codex/fmapi-codingagent-setup/: SKILL.md
skills-codex/fmapi-codingagent-status/: SKILL.md
skills-codex/fmapi-codingagent-validate-models/: SKILL.md
skills/fmapi-codingagent-doctor/: SKILL.md
skills/fmapi-codingagent-list-models/: SKILL.md
skills/fmapi-codingagent-reauth/: SKILL.md
skills/fmapi-codingagent-setup/: SKILL.md
skills/fmapi-codingagent-status/: SKILL.md
skills/fmapi-codingagent-validate-models/: SKILL.md
src/fmapi_opskit/: __init__.py  (+4 more)
templates/: fmapi-key-helper.sh.template
tests/: conftest.py  test-hooks.sh  test_agent_adapter.py  test_auth.py  test_cli_flags.py  test_clone_dir.py  test_codex_adapter.py  test_codex_skills.py  test_config_validation.py  test_deps.py  test_discovery_relative_helper.py  test_helper_migration.py  test_helper_script_token_refresh.py  test_helper_script_validity.py  test_hooks_logic.py  test_host_change.py  test_install_deps.py  test_install_script.py  test_model_selection_prompt.py  test_network.py  test_platform.py  test_prompts.py  test_settings_manager.py  test_stress_token_locking.py  test_template_renderer.py  test_toml_manager.py  test_ui_prompts.py
(+42 files in other folders)
