[project]
name = "fmapi-codingagent-opskit"
version = "0.1.0"
description = "Configure coding agents to use Databricks Foundation Model API"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "simple-term-menu>=1.6.6",
]

[project.scripts]
setup-fmapi-claudecode = "fmapi_opskit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fmapi_opskit"]

[tool.hatch.build.targets.wheel.force-include]
"src/fmapi_opskit/templates/fmapi-key-helper.sh.template" = "fmapi_opskit/templates/fmapi-key-helper.sh.template"
"src/fmapi_opskit/templates/fmapi-auth-precheck.sh.template" = "fmapi_opskit/templates/fmapi-auth-precheck.sh.template"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
